--- a/src/componets/Pages/home/home.module.css
+++ b/src/componets/Pages/home/home.module.css
@@ -35,25 +35,14 @@
     }
 }
 
-.gup{
-    padding-left: 500px;
-    font-size: 40px;
-    font-weight: bold;
-    color: black;
-    padding-bottom: 10px;
-}
+
 .textcolor{
     font-weight: bold;
     font-size: 20px;
     text-decoration: none;
     color: rgba(112, 26, 233, 0.947);
 }
-.text{
-    font-weight: bold;
-    font-size: 20px;
-    padding-left: 500px;
-    padding-right: 500px;
-}
+
 /* .levo{
     color: rgba(112, 26, 233, 0.947);
     font-size: 60px;
@@ -87,10 +76,37 @@
     display: flex;
     justify-content: space-between;
     font-size: 60px;
+    color: rgba(112, 26, 233, 0.947);
 }
 
 .bottom {
     display: flex;
     justify-content: space-between;
     font-size: 60px;
+    color: rgba(112, 26, 233, 0.947);
+}
+
+.text{
+    max-width: 80%;
+    padding: 0px 40px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.gup{
+    font-size: 40px;
+    font-weight: bold;
+    color: black;
+
+
+    max-width: 80%;
+    padding: 0px 40px;
+    padding-bottom: 10px;
+    width: 100%;
 }
