--- a/src/componets/layout/footer/ui/Footer.module.css
+++ b/src/componets/layout/footer/ui/Footer.module.css
@@ -1,23 +1,23 @@
 .footer {
     background-color: rgb(109, 18, 184);
-    padding: 70px;
+    width: 100%;
     text-align: center;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     color: #fff;
-    position: relative;
+    
+    align-items: flex-end;
+    justify-content: flex-end;
+    display: flex;
 
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15), 0px 4px 12px rgba(0, 0, 0, 0.05);
 
-    
+    display: flex;
+    align-items: center;
+    padding: 16px;
 }
 
 .footer2 {
-    position: absolute;
-    width: 100%;
-    top: -390px;
-    left: 0px;
-    z-index: -1;
     
     align-items: center;
    
@@ -32,9 +32,11 @@
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     background-color: rgb(0, 0, 0);
-    height: 50px;
-    padding: 400px;
-    padding-top: 50px;
+    padding: 60px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
 }
 
 .logo{
@@ -84,8 +86,6 @@
 
 .pages{
     display: flex;
-    
-    position: absolute;
     
 }
 .pages img {
