--- a/src/componets/shared/ui/cards/cards.module.css
+++ b/src/componets/shared/ui/cards/cards.module.css
@@ -11,15 +11,61 @@
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    
+}
+
+.button_disabled {
+    opacity: 0.3;
+    pointer-events: none;
 }
 
 .card img {
     width: 300px;
     height: 300px;
     border-radius: 16px;
-    object-fit: contain;
+    object-fit: cover;
 }
+
+@media screen and (max-width: 1370px) {
+    .card {
+        width: calc(50% - 64px);
+    }
+
+    .card img {
+        width: 100%;
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+
+
+    .card img {
+        width: 100%;
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+
+
+    .card img {
+        width: 100%;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .card {
+        width:100%;
+    }
+
+    .card img {
+        width: 100%;
+        height: 400px;
+    }
+}
+
+
 
 .title {
     font-size: 16px;
