--- a/src/componets/navigate.module.css
+++ b/src/componets/navigate.module.css
@@ -1,9 +1,12 @@
 @keyframes fadeOut {
-    from {
+    0% {
       opacity: 0;
     }
-    to {
+    50% {
       opacity: 1;
+    }
+    100%{
+      opacity: 0;
     }
   }
 
