--- a/src/componets/layout/footer/ui/Footer.module.css
+++ b/src/componets/layout/footer/ui/Footer.module.css
@@ -14,7 +14,10 @@
 
     display: flex;
     align-items: center;
-    padding: 16px;
+    
+    justify-content: space-between;
+    padding: 40px;
+    
 }
 
 .footer2 {
@@ -36,7 +39,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-
+    
+    
 }
 
 .logo{
@@ -44,7 +48,7 @@
     font-family: Impact;
     font-size: 80px;
     display: flex;
-    
+    padding-left: 50px;
    
     
    
@@ -55,7 +59,7 @@
     font-size: 30px;
     font-family: Impact;
     display: flex;
-    
+    padding-left: 50px;
     margin-bottom: 30px;
     
 }
@@ -64,7 +68,7 @@
     font-size: 30px;
     font-family: Impact;
     display: flex;
-    
+    padding-left: 50px;
     
 }
 
@@ -73,7 +77,8 @@
     font-size: 30px;
     font-family: Impact;
     display: flex;
-    
+    padding-left: 50px;
+    margin-bottom: 30px;
 }
 .text4{
     color: #5e5959;
@@ -86,13 +91,16 @@
 
 .pages{
     display: flex;
+    order: 2;
+    font-size: 75px;
+    
     
 }
 .pages img {
     margin-right: 10px; 
     width: 90px; 
     height: auto;
-  
+    
   }
 .info{
     cursor: pointer;
@@ -103,4 +111,10 @@
     
     text-decoration: none;
     
+}
+.pages1{
+    display: flex;
+    padding-left: 15px;
+    font-size: 75px;
+
 }
