--- a/src/componets/Pages/Cabinet.module.css
+++ b/src/componets/Pages/Cabinet.module.css
@@ -44,7 +44,7 @@
 .profile__input{
    height: 40px;
    border-radius: 8px;
-   border: 1px solid white;
+   border: 1px solid gray;
     width: 600px;
     padding-left: 20px;
     
