--- a/src/componets/Pages/Order.module.css
+++ b/src/componets/Pages/Order.module.css
@@ -10,13 +10,18 @@
     grid-row: 1;
 }
 
+
+
+
+
 .gridbotton{
     grid-column: 1;
     grid-row: 1;
+    padding: 16px;
 }
 
 .contenercard{
-    height: 100vh;
+    
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
@@ -27,6 +32,7 @@
     color: black;
     font-weight: bold;
     padding-top: 10px;
+    
 
 }
 
@@ -34,8 +40,12 @@
     height: 40px;
    border-radius: 8px;
    border: 1px solid gray;
-    width: 600px;
+    width: 100%;
     padding-left: 20px;
+    display: grid;
+    grid-template-rows: 2fr;
+    grid-template-columns: repeat(3,1fr);
+   
     
     
 }
@@ -44,8 +54,66 @@
     height: 40px;
    border-radius: 8px;
    border: 1px solid gray;
-    width: 250px;
+   
     padding-left: 20px;
     
     
 }
+.gridtext{
+    display: grid;
+    grid-template-rows: 2fr;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+    
+}
+.profile__grid{
+    display: grid;
+    grid-template-rows: 2fr;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+    width: 100%;
+   
+}
+
+.profile__input3{
+    height: 40px;
+   border-radius: 8px;
+   border: 1px solid gray;
+    
+    padding-left: 20px;
+    
+}
+
+.profile__grid2{
+    display: grid;
+    grid-template-rows: 2fr;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+}
+.buy{
+    display: flex;
+    border: none;
+    color: white;
+    background-color: blueviolet;
+    border-radius: 50px;
+    font-size: 25px;
+   margin-top: 10px;
+   width: 400px;
+   justify-content: center;
+   
+   
+
+}
+.buttonbuy{
+    display: flex;
+    justify-content: center;
+}
+
+.imgsize{
+    max-height: 150px;
+    max-width: 146px;
+    display: grid;
+    border-radius: 12px;
+    
+}
+
