--- a/src/componets/Pages/Cabinet.module.css
+++ b/src/componets/Pages/Cabinet.module.css
@@ -1,11 +1,15 @@
 .profile{
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+}
+
 .profile__titel{
-    font-size:  15px;
-    margin: 20px;
-    font-weight: bold;
-   
+    font-size:  16px;
+    font-weight: 500;
     
 }
 .profile__user{
@@ -36,17 +40,15 @@
 .profile__info{
    font-size: 18px; 
    color: gray;
-   margin-bottom: 20px;
-   border-bottom: 4px solid grey;
-   padding-bottom: 50px;
-   width: 900px;
+   width: 100%;
 }
 .profile__input{
    height: 40px;
    border-radius: 8px;
    border: 1px solid gray;
-    width: 600px;
-    padding-left: 20px;
+
+   width: 100%;
+padding-left: 20px;
     
 
 }
@@ -71,7 +73,7 @@
     cursor: pointer;
     border-top: 4px solid grey;
     padding-top: 50px;
-    width: 900px;
+    width: 100%;
 }
 .pof{
     font-weight: bold;
@@ -82,5 +84,5 @@
     margin-top: 40px;
     border-bottom: 4px solid grey;
     padding-bottom: 10px;
-    width: 900px;
+    width: 100%;
 }
