--- a/src/componets/layout/header/ui/styles.module.css
+++ b/src/componets/layout/header/ui/styles.module.css
@@ -7,7 +7,7 @@
     background: #fff;
     padding: 16px;
     z-index: 100;
-    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.15);
+    box-shadow:0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
     
   
     display: flex;
@@ -44,7 +44,7 @@
    
     
     cursor: pointer;
-    font-size: 30px;
+    font-size: 24px;
     background: none;
     border: 0;
     font-family: Arial;
@@ -167,7 +167,6 @@
   }
   
   .page {
-    margin-top: 166px;
     overflow: hidden;
     margin-bottom: 466px;
   }
